Adicionar as sessoes de conteudo no site

--- a/estilo.css
+++ b/estilo.css
@@ -10,6 +10,7 @@ body {
                 linear-gradient(50deg,#ff4169,#7c26f8);
     background-attachment: fixed;
     font-family: Helvetica,Arial,sans-serif;
+    overflow-x: hidden;
 }
 
 /* ---  Barra de navegação ---- */
@@ -91,10 +92,55 @@ nav.navbar-transparente {
     color: black;
 }
 
+/* ---  Sessao serviços ---- */
+#servicos {
+    background: white;
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
+
+.albuns {
+    padding: 10px 0px;
+}
+
+/* ---  Sessao recursos ---- */
+#recursos {
+    padding-top: 20px;
+    padding-bottom: 20px;
+    color: white;
+}
+
+.rotacionar {
+    -ms-transform: rotate(30deg);
+    -webkit-transform: rotate(30deg);
+    transform: rotate(30deg);
+    padding-left: 80px;
+}
+
 /* ============== tipografia ============== */
 h1 {
     font-size: 100px;
     font-weight: 900;
     letter-spacing: -0.05em;
     margin-bottom: 50px;
+}
+
+h2 {
+    font-size: 50px;
+    font-weight: 700;
+    letter-spacing: -0.04em;
+}
+
+h3 {
+    font-size: 35px;
+    font-weight: 700;
+    letter-spacing: -0.04em;
+}
+
+#servicos h2, #servicos h3 {
+    color: #7c25f8;
+}
+
+#recursos h3 {
+    color: #9bf0e1;
 }
