--- a/estilo.css
+++ b/estilo.css
@@ -41,12 +41,13 @@ nav.navbar-transparente {
 }
 
 /* sinal > mostra o filho direto e formata apenas ele */
-.navbar-inverse .navbar-nav>li>a {
+.navbar-inverse .navbar-nav>li>a, footer .nav a {
     color: white;
 }
 
-.navbar-inverse .navbar-nav>li>a:hover {
+.navbar-inverse .navbar-nav>li>a:hover, footer .nav a:hover {
     color: #9bf0e1;
+    background: none;
 }
 
 /* ---  Imagem de capa ---- */
@@ -117,6 +118,18 @@ nav.navbar-transparente {
     padding-left: 80px;
 }
 
+/* ---  Rodape ---- */
+footer {
+    background: #000;
+    padding: 50px 0px 20px 0px;
+    position: relative;
+}
+
+.item-rede-social {
+    float: right;
+}
+
+
 /* ============== tipografia ============== */
 h1 {
     font-size: 100px;
@@ -135,6 +148,12 @@ h3 {
     font-size: 35px;
     font-weight: 700;
     letter-spacing: -0.04em;
+}
+
+#rodape h4 {
+    color: #919496;
+    font-size: 14px;
+    transform: uppercase;
 }
 
 #servicos h2, #servicos h3 {
